--- a/examples/with-function-calling/package.json
+++ b/examples/with-function-calling/package.json
@@ -21,6 +21,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@next/eslint-plugin-next": "^14.2.1",
     "@types/react": "^18.2",
     "@types/react-dom": "^18.2"
   }
