--- a/examples/with-next/tsconfig.json
+++ b/examples/with-next/tsconfig.json
@@ -1,5 +1,5 @@
 {
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".eslintrc.cjs"],
   "exclude": ["node_modules"],
   "compilerOptions": {
     "allowJs": true,
