--- a/examples/with-function-calling/package.json
+++ b/examples/with-function-calling/package.json
@@ -11,7 +11,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "@markprompt/core": "*",
+    "@markprompt/core": "workspace:*",
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-visually-hidden": "^1.0.3",
     "classnames": "^2.5.1",
