Remove all refs and update graph deps

--- a/turbo.json
+++ b/turbo.json
@@ -18,7 +18,9 @@
     },
     "//#lint:md": {},
     "//#lint:ts": {},
-    "lint:ts": {},
+    "lint:ts": {
+      "dependsOn": ["^build"]
+    },
     "//#test": {
       "outputs": ["coverage/**"]
     }
