--- a/package.json
+++ b/package.json
@@ -25,7 +25,6 @@
   },
   "dependencies": {
     "@changesets/changelog-github": "^0.5.0",
-    "@changesets/cli": "^2.27.1",
     "@manypkg/cli": "^0.21.4",
     "@typescript-eslint/eslint-plugin": "^7.7.0",
     "@typescript-eslint/parser": "^7.7.0",
@@ -70,5 +69,8 @@
       "react": "^18.2",
       "react-dom": "^18.2"
     }
+  },
+  "devDependencies": {
+    "@changesets/cli": "^2.27.1"
   }
 }
