--- a/examples/with-markprompt-web/package.json
+++ b/examples/with-markprompt-web/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "@markprompt/css": "workspace:*",
     "@markprompt/web": "workspace:*",
-    "preact": "^10.20.2",
-    "randomuuid": "^1.0.1"
+    "preact": "^10.20.2"
   },
   "devDependencies": {
     "vite": "^5.2.9"
