--- a/examples/with-automatic-ticket-creation/package.json
+++ b/examples/with-automatic-ticket-creation/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "with-markprompt-web",
+  "name": "with-automatic-ticket-creation",
   "version": "0.0.0",
   "private": true,
   "type": "module",
@@ -11,7 +11,8 @@
   "dependencies": {
     "@markprompt/css": "workspace:*",
     "@markprompt/web": "workspace:*",
-    "preact": "^10.20.2"
+    "preact": "^10.20.2",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "vite": "^5.2.9"
